--- a/nx.json
+++ b/nx.json
@@ -84,8 +84,11 @@
         "@nx/angular:application": {
             "e2eTestRunner": "playwright",
             "linter": "eslint",
-            "style": "css",
+            "style": "scss",
             "unitTestRunner": "vitest-analog"
+        },
+        "@schematics/angular:component": {
+            "style": "scss"
         }
     }
 }
