--- a/apps/shell/project.json
+++ b/apps/shell/project.json
@@ -20,7 +20,7 @@
                         "input": "apps/shell/public"
                     }
                 ],
-                "styles": ["apps/shell/src/styles.css"],
+                "styles": ["apps/shell/src/styles.scss"],
                 "customWebpackConfig": {
                     "path": "apps/shell/webpack.config.ts"
                 }
