--- a/apps/mfe-garage/project.json
+++ b/apps/mfe-garage/project.json
@@ -20,7 +20,7 @@
                         "input": "apps/mfe-garage/public"
                     }
                 ],
-                "styles": ["apps/mfe-garage/src/styles.scss"],
+                "styles": ["apps/mfe-garage/src/styles.css"],
                 "customWebpackConfig": {
                     "path": "apps/mfe-garage/webpack.config.ts"
                 }
