--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "nx run-many -t test",
     "lint": "nx run-many -t lint",
     "docker:up": "nx build nest-core && docker-compose up -d",
-    "docker:down": "docker-compose down"
+    "docker:down": "docker-compose down",
+    "seed": "ts-node apps/nest-core/prisma/seed.ts"
   },
   "private": true,
   "dependencies": {
@@ -22,14 +23,26 @@
     "@angular/router": "~21.1.0",
     "@angular/ssr": "~21.1.0",
     "@nestjs/common": "^11.0.0",
+    "@nestjs/config": "^4.0.3",
     "@nestjs/core": "^11.0.0",
+    "@nestjs/jwt": "^11.0.2",
+    "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.0",
     "@ng-icons/core": ">=32.0.0 <34.0.0",
     "@ng-icons/lucide": ">=32.0.0 <34.0.0",
     "@nx/angular": "22.5.1",
+    "@prisma/adapter-pg": "^7.4.0",
+    "@prisma/client": "^7.4.0",
     "@spartan-ng/brain": "0.0.1-alpha.637",
     "axios": "^1.6.0",
+    "bcrypt": "^6.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.3",
+    "dotenv": "^17.3.1",
     "express": "^4.21.2",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "pg": "^8.18.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
@@ -70,9 +83,13 @@
     "@swc/core": "~1.15.5",
     "@swc/helpers": "~0.5.18",
     "@tailwindcss/postcss": "^4.1.18",
+    "@types/bcrypt": "^6.0.0",
+    "@types/dotenv": "^8.2.3",
     "@types/express": "^4.17.21",
     "@types/jest": "^30.0.0",
     "@types/node": "20.19.9",
+    "@types/passport-jwt": "^4.0.1",
+    "@types/pg": "^8.16.0",
     "@typescript-eslint/utils": "^8.40.0",
     "@vitest/coverage-v8": "^4.0.0",
     "@vitest/ui": "^4.0.8",
@@ -96,6 +113,7 @@
     "postcss-loader": "^8.2.1",
     "postcss-url": "~10.1.3",
     "prettier": "~3.6.2",
+    "prisma": "^7.4.0",
     "tailwind-merge": "^3.4.1",
     "tailwindcss": "^4.1.18",
     "tailwindcss-animate": "^1.0.7",
