--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -74,6 +74,42 @@
       ],
       "@spartan-ng/helm/field": [
         "libs/ui/field/src/index.ts"
+      ],
+      "@spartan-ng/helm/table": [
+        "libs/ui/table/src/index.ts"
+      ],
+      "@spartan-ng/helm/scroll-area": [
+        "libs/ui/scroll-area/src/index.ts"
+      ],
+      "@spartan-ng/helm/checkbox": [
+        "libs/ui/checkbox/src/index.ts"
+      ],
+      "@spartan-ng/helm/tabs": [
+        "libs/ui/tabs/src/index.ts"
+      ],
+      "@spartan-ng/helm/dialog": [
+        "libs/ui/dialog/src/index.ts"
+      ],
+      "@spartan-ng/helm/select": [
+        "libs/ui/select/src/index.ts"
+      ],
+      "@spartan-ng/helm/form-field": [
+        "libs/ui/form-field/src/index.ts"
+      ],
+      "@spartan-ng/helm/toggle": [
+        "libs/ui/toggle/src/index.ts"
+      ],
+      "@spartan-ng/helm/toggle-group": [
+        "libs/ui/toggle-group/src/index.ts"
+      ],
+      "@spartan-ng/helm/hover-card": [
+        "libs/ui/hover-card/src/index.ts"
+      ],
+      "@spartan-ng/helm/popover": [
+        "libs/ui/popover/src/index.ts"
+      ],
+      "@spartan-ng/helm/command": [
+        "libs/ui/command/src/index.ts"
       ]
     }
   },
