--- a/apps/shell/project.json
+++ b/apps/shell/project.json
@@ -2,7 +2,7 @@
     "name": "shell",
     "$schema": "../../node_modules/nx/schemas/project-schema.json",
     "projectType": "application",
-    "prefix": "lifeos",
+    "prefix": "app",
     "sourceRoot": "apps/shell/src",
     "tags": [],
     "targets": {
