--- a/package.json
+++ b/package.json
@@ -29,13 +29,13 @@
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.0",
     "@nestjs/schedule": "^6.1.1",
+    "@nestjs/swagger": "^11.2.6",
     "@ng-icons/core": ">=32.0.0 <34.0.0",
     "@ng-icons/lucide": ">=32.0.0 <34.0.0",
     "@nx/angular": "22.5.1",
     "@prisma/adapter-pg": "^7.4.0",
     "@prisma/client": "^7.4.0",
     "@spartan-ng/brain": "0.0.1-alpha.637",
-    "@types/cron": "^2.4.3",
     "axios": "^1.6.0",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
@@ -48,6 +48,7 @@
     "pg": "^8.18.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.8.0",
+    "swagger-ui-express": "^5.0.1",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
