--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,69 +1,126 @@
 {
-    "compileOnSave": false,
-    "compilerOptions": {
-        "rootDir": ".",
-        "sourceMap": true,
-        "declaration": false,
-        "moduleResolution": "node",
-        "emitDecoratorMetadata": true,
-        "experimentalDecorators": true,
-        "importHelpers": true,
-        "target": "es2015",
-        "module": "esnext",
-        "lib": ["es2020", "dom"],
-        "skipLibCheck": true,
-        "skipDefaultLibCheck": true,
-        "baseUrl": ".",
-        "paths": {
-            "mfeGarage/Routes": [
-                "apps/mfe-garage/src/app/remote-entry/entry.routes.ts"
-            ],
-            "mfeFamily/Routes": [
-                "apps/mfe-family/src/app/remote-entry/entry.routes.ts"
-            ],
-            "mfeKnowledge/Routes": [
-                "apps/mfe-knowledge/src/app/remote-entry/entry.routes.ts"
-            ],
-            "@lifeos-nexus/ui": ["libs/ui/src/index.ts"],
-            "@spartan-ng/helm/button": ["libs/ui/button/src/index.ts"],
-            "@spartan-ng/helm/utils": ["libs/ui/utils/src/index.ts"],
-            "@spartan-ng/helm/input": ["libs/ui/input/src/index.ts"],
-            "@spartan-ng/helm/dropdown-menu": [
-                "libs/ui/dropdown-menu/src/index.ts"
-            ],
-            "@spartan-ng/helm/icon": ["libs/ui/icon/src/index.ts"],
-            "@spartan-ng/helm/label": ["libs/ui/label/src/index.ts"],
-            "@spartan-ng/helm/card": ["libs/ui/card/src/index.ts"],
-            "@spartan-ng/helm/separator": ["libs/ui/separator/src/index.ts"],
-            "@spartan-ng/helm/sheet": ["libs/ui/sheet/src/index.ts"],
-            "@spartan-ng/helm/avatar": ["libs/ui/avatar/src/index.ts"],
-            "@spartan-ng/helm/sidebar": ["libs/ui/sidebar/src/index.ts"],
-            "@spartan-ng/helm/skeleton": ["libs/ui/skeleton/src/index.ts"],
-            "@spartan-ng/helm/tooltip": ["libs/ui/tooltip/src/index.ts"],
-            "@spartan-ng/helm/collapsible": [
-                "libs/ui/collapsible/src/index.ts"
-            ],
-            "@spartan-ng/helm/field": ["libs/ui/field/src/index.ts"],
-            "@spartan-ng/helm/table": ["libs/ui/table/src/index.ts"],
-            "@spartan-ng/helm/scroll-area": [
-                "libs/ui/scroll-area/src/index.ts"
-            ],
-            "@spartan-ng/helm/checkbox": ["libs/ui/checkbox/src/index.ts"],
-            "@spartan-ng/helm/tabs": ["libs/ui/tabs/src/index.ts"],
-            "@spartan-ng/helm/dialog": ["libs/ui/dialog/src/index.ts"],
-            "@spartan-ng/helm/select": ["libs/ui/select/src/index.ts"],
-            "@spartan-ng/helm/form-field": ["libs/ui/form-field/src/index.ts"],
-            "@spartan-ng/helm/toggle": ["libs/ui/toggle/src/index.ts"],
-            "@spartan-ng/helm/toggle-group": [
-                "libs/ui/toggle-group/src/index.ts"
-            ],
-            "@spartan-ng/helm/hover-card": ["libs/ui/hover-card/src/index.ts"],
-            "@spartan-ng/helm/popover": ["libs/ui/popover/src/index.ts"],
-            "@spartan-ng/helm/command": ["libs/ui/command/src/index.ts"],
-            "@lifeos-nexus/data-access": [
-                "libs/shared/data-access/src/index.ts"
-            ]
-        }
-    },
-    "exclude": ["node_modules", "tmp"]
+  "compileOnSave": false,
+  "compilerOptions": {
+    "rootDir": ".",
+    "sourceMap": true,
+    "declaration": false,
+    "moduleResolution": "node",
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "importHelpers": true,
+    "target": "es2015",
+    "module": "esnext",
+    "lib": [
+      "es2020",
+      "dom"
+    ],
+    "skipLibCheck": true,
+    "skipDefaultLibCheck": true,
+    "baseUrl": ".",
+    "paths": {
+      "mfeGarage/Routes": [
+        "apps/mfe-garage/src/app/remote-entry/entry.routes.ts"
+      ],
+      "mfeFamily/Routes": [
+        "apps/mfe-family/src/app/remote-entry/entry.routes.ts"
+      ],
+      "mfeKnowledge/Routes": [
+        "apps/mfe-knowledge/src/app/remote-entry/entry.routes.ts"
+      ],
+      "@lifeos-nexus/ui": [
+        "libs/ui/src/index.ts"
+      ],
+      "@spartan-ng/helm/button": [
+        "libs/ui/button/src/index.ts"
+      ],
+      "@spartan-ng/helm/utils": [
+        "libs/ui/utils/src/index.ts"
+      ],
+      "@spartan-ng/helm/input": [
+        "libs/ui/input/src/index.ts"
+      ],
+      "@spartan-ng/helm/dropdown-menu": [
+        "libs/ui/dropdown-menu/src/index.ts"
+      ],
+      "@spartan-ng/helm/icon": [
+        "libs/ui/icon/src/index.ts"
+      ],
+      "@spartan-ng/helm/label": [
+        "libs/ui/label/src/index.ts"
+      ],
+      "@spartan-ng/helm/card": [
+        "libs/ui/card/src/index.ts"
+      ],
+      "@spartan-ng/helm/separator": [
+        "libs/ui/separator/src/index.ts"
+      ],
+      "@spartan-ng/helm/sheet": [
+        "libs/ui/sheet/src/index.ts"
+      ],
+      "@spartan-ng/helm/avatar": [
+        "libs/ui/avatar/src/index.ts"
+      ],
+      "@spartan-ng/helm/sidebar": [
+        "libs/ui/sidebar/src/index.ts"
+      ],
+      "@spartan-ng/helm/skeleton": [
+        "libs/ui/skeleton/src/index.ts"
+      ],
+      "@spartan-ng/helm/tooltip": [
+        "libs/ui/tooltip/src/index.ts"
+      ],
+      "@spartan-ng/helm/collapsible": [
+        "libs/ui/collapsible/src/index.ts"
+      ],
+      "@spartan-ng/helm/field": [
+        "libs/ui/field/src/index.ts"
+      ],
+      "@spartan-ng/helm/table": [
+        "libs/ui/table/src/index.ts"
+      ],
+      "@spartan-ng/helm/scroll-area": [
+        "libs/ui/scroll-area/src/index.ts"
+      ],
+      "@spartan-ng/helm/checkbox": [
+        "libs/ui/checkbox/src/index.ts"
+      ],
+      "@spartan-ng/helm/tabs": [
+        "libs/ui/tabs/src/index.ts"
+      ],
+      "@spartan-ng/helm/dialog": [
+        "libs/ui/dialog/src/index.ts"
+      ],
+      "@spartan-ng/helm/select": [
+        "libs/ui/select/src/index.ts"
+      ],
+      "@spartan-ng/helm/form-field": [
+        "libs/ui/form-field/src/index.ts"
+      ],
+      "@spartan-ng/helm/toggle": [
+        "libs/ui/toggle/src/index.ts"
+      ],
+      "@spartan-ng/helm/toggle-group": [
+        "libs/ui/toggle-group/src/index.ts"
+      ],
+      "@spartan-ng/helm/hover-card": [
+        "libs/ui/hover-card/src/index.ts"
+      ],
+      "@spartan-ng/helm/popover": [
+        "libs/ui/popover/src/index.ts"
+      ],
+      "@spartan-ng/helm/command": [
+        "libs/ui/command/src/index.ts"
+      ],
+      "@lifeos-nexus/data-access": [
+        "libs/shared/data-access/src/index.ts"
+      ],
+      "@spartan-ng/helm/textarea": [
+        "libs/ui/textarea/src/index.ts"
+      ]
+    }
+  },
+  "exclude": [
+    "node_modules",
+    "tmp"
+  ]
 }
